# deepsights-api

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build_docs.yml  pylint.yml  run_pylint.yml  run_tests.yml
deepsights/: __init__.py  _version.py  exceptions.py
deepsights/answers/: __init__.py  answer.py  answer_v1.py  model.py
deepsights/api/: __init__.py  api.py  model.py  resource.py  unified_token.py
deepsights/contentstore/: __init__.py  _search.py  contentstore.py  model.py  news.py  secondary.py
deepsights/contentstore/resources/: __init__.py  _download.py  _model.py  _search.py  _url.py  news.py  secondary.py
deepsights/deepsights/: __init__.py  _mip_identity.py  deepsights.py
deepsights/deepsights/resources/: __init__.py
deepsights/documents/: __init__.py  _cache.py  delete.py  download.py  list.py  load.py  model.py  search.py  upload.py
deepsights/documentstore/: __init__.py  documentstore.py
deepsights/documentstore/resources/: __init__.py
deepsights/minions/: _minions.py
deepsights/reports/: __init__.py
deepsights/userclient/: __init__.py  userclient.py
deepsights/userclient/minions/: _minions.py
deepsights/userclient/resources/: __init__.py  _model.py
deepsights/utils/: __init__.py  _cache.py  _ranking.py  _utils.py  model.py
docs/: deepsights.html  index.html  search.js
docs/deepsights/: answers.html  api.html  contentstore.html  documents.html  minions.html  reports.html  utils.html
docs/deepsights/answers/: _model.html  answer.html  answer_v1.html  model.html
docs/deepsights/api/: _model.html  api.html  model.html  quota.html
docs/deepsights/contentstore/: _model.html  _search.html  model.html  news.html  secondary.html
docs/deepsights/documents/: _cache.html  _model.html  _segmenter.html  delete.html  download.html  load.html  model.html  search.html  upload.html
docs/deepsights/minions/: _minions.html
docs/deepsights/reports/: _model.html  model.html  report.html
docs/deepsights/utils/: _cache.html  _ranking.html  _utils.html  cache.html  model.html  ranking.html  utils.html
scripts/: precommit.sh
src/deepsights/: __init__.py
src/deepsights/answers/: __init__.py  _model.py  answer.py  model.py
src/deepsights/api/: __init__.py  _model.py  api.py  quota.py
src/deepsights/contentstore/: __init__.py  _model.py  _search.py  news.py  secondary.py
tests/: conftest.py
tests/contentstore/: test_contentstore_unified.py  test_news_search.py  test_secondary_search.py
tests/data/: test_data.json  test_presentation.pptx
tests/deepsights/: test_deepsights_init.py
tests/documentstore/: __init__.py  test_document_taxonomy.py  test_download.py  test_lifecycle.py  test_list.py  test_load.py  test_search.py  test_search_taxonomy_filters.py  test_taxonomy.py
tests/helpers/: __init__.py  common.py  validation.py
tests/userclient/: test_rate_limiting.py  test_userclient_refresh.py  test_userclient_unified.py
typings/cachetools/: __init__.pyi
typings/pydantic/: __init__.pyi
typings/ratelimit/: __init__.pyi
typings/requests/: __init__.pyi  adapters.pyi  exceptions.pyi
typings/tenacity/: __init__.pyi
(+115 files in other folders)
