[project]
name = "deepsights-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.3.1",
    "pydantic>=2.6.1",
    "pytest>=8.0.2",
    "ratelimit>=2.2.1",
    "requests>=2.31.0",
    "setuptools>=69.1.1",
    "tenacity>=8.2.3",
]
