[project]
name = "deepsights-api"
version = "1.3.9"
description = "Python library for the DeepSights APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cachetools>=5.3.1",
    "pydantic>=2.6.1",
    "pytest>=8.0.2",
    "ratelimit>=2.2.1",
    "requests>=2.31.0",
    "setuptools>=69.1.1",
    "tenacity>=8.2.3",
]
license = { text = "Apache-2.0" }
authors = [
    { name = "Market Logic Software", email = "info@marketlogicsoftware.com" }
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Documentation = "https://marketlogicsoftware.github.io/deepsights-api/"
Repository = "https://github.com/marketlogicsoftware/deepsights-api"

[project.optional-dependencies]
test = [
    "pytest>=8.0.2",
]
lint = [
    "pylint>=3.0.3",
]
docs = [
    "pdoc>=14.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepsights"]

[tool.hatch.metadata]
allow-direct-references = true
