[project]
name = "deepsights-api"
dynamic = ["version"]
description = "Python library for the DeepSights APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cachetools>=5.3.1",
    "pydantic>=2.6.1",
    "ratelimit>=2.2.1",
    "requests>=2.31.0",
    "tenacity>=8.2.3",
    "types-cachetools>=6.2.0.20251022",
]
license = { text = "Apache-2.0" }
authors = [
    { name = "Market Logic Software", email = "info@marketlogicsoftware.com" }
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Documentation = "https://marketlogicsoftware.github.io/deepsights-api/"
Repository = "https://github.com/marketlogicsoftware/deepsights-api"

[project.optional-dependencies]
test = [
    "pytest>=8.0.2",
    "python-dotenv>=1.0.1",
]
lint = [
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ruff>=0.6.9",
    "types-requests>=2.31.0.20240218",
    "types-cachetools>=5.3.0",
]
docs = [
    "pdoc>=14.4.0",
]

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepsights"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "deepsights/_version.py"
